syntax="proto3";

service ClientServerGrpcService {
	rpc ReadObject (ReadObjectRequest) returns (ReadObjectReply);
	rpc WriteObject (WriteObjectRequest) returns (WriteObjectReply);
	rpc ListServer (ListServerRequest) returns (ListServerReply);
	rpc ListGlobal (ListGlobalRequest) returns (ListGlobalReply);
}

message ObjectId {
	string partition_id = 1;
	string object_key = 2;
}

message ObjectVersion {
	string client_id = 1;
	int32 counter = 2;
}

message ObjectInfo {
	ObjectId key = 1;
	string value = 2;
	bool isPartitionMaster = 3; 

}

message ReadObjectRequest {
	ObjectId key = 1;
}

message ReadObjectReply {
	string value = 1;
}


message WriteObjectRequest {
	ObjectId key = 1;
	string value = 2;
}

message WriteObjectReply {
	bool ok = 1;
}

message ListServerRequest {

}

message ListGlobalRequest {

}

message ListServerReply {
	repeated ObjectInfo objects = 1;
}

message ListGlobalReply {
	repeated ObjectId keys = 1;	
}
